# StockTradingSimulator

./: .gitattributes  .gitignore  BuyAndHold.h  CMakeLists.txt  CMakeLists.txt.user.2e86f06  CMakeLists.txt.user.723187c  CMakeLists.txt.user.e0d346f  Changelog.md  Changelog.txt  DirectionalStrategy.h  Market.h  MarketNeutralStrategy.h  MeanReversion.h  MovingAvg.h  README.md  RandomStrategy.h  RiskManagement.h  TradeMain.cpp  TradingBot.cpp  TradingBot.h  TradingStrategy.h  TrendFollowing.h  helpwindow.h  listing_status.py  logindialog.cpp  logindialog.h  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  trades_taken.txt  trading_bot_test_.cpp  weekly_adobe.csv  weekly_amazon.csv  weekly_apple.csv  weekly_datascraper.py  weekly_duolingo.csv  weekly_google.csv  weekly_ibm.csv  (+4 more)
